feat(armor): server-authoritative caps, dimension-independent clock, budgeted cloak scan
Three of the four hardening items the audit left on the modular armor. The fourth
(per-module effect GameTests) is still open.

- Caps are now server-authoritative. All 15 settings gain an armor.moduleCaps.*
  key in ufo-server.toml that can only tighten the design maximum, so a server or
  modpack can limit reach, speed, magnet and cloak range without editing the mod.
  The server enforces it both at the C2S boundary and on every effect read
  (UfoArmorModules.cappedSetting); the client keeps reading the uncapped design
  range so the configuration UI still shows what the item is capable of.

- Clamp overflow, found while writing the tests and reachable from a crafted
  packet: the old arithmetic subtracted before bounding, so an extreme wire value
  overflowed and flipped to the opposite end of the range.
    kinetic_speed [25,1000,25], Integer.MIN_VALUE -> 1000 (the maximum)
    flight_inertia [0,100,10],  Integer.MAX_VALUE -> 0    (the minimum)
  A client could therefore obtain the strongest setting by sending the most
  negative one. The arithmetic moved to ArmorSettingMath, which bounds first; the
  failing tests were written before the fix and are kept.

- The armor clock is now the overworld's game time instead of the wearer's current
  dimension, so cadences and the translocator cooldown no longer jump when a
  player changes dimension.

- The cloak re-scans every 5 ticks instead of every tick. It was running a
  getEntitiesOfClass over up to 128 blocks per wearer per tick, outside the
  existing % 20 gate that only covered energy consumption.

- Tests: ArmorSettingMathTest covers the clamp at the wire extremes (unit, no
  Minecraft needed); ArmorCatalogGameTests asserts against the real registries
  that every module is registered, translated and craftable and that every
  setting is translated and clamped by the server. 233 unit tests, 30 GameTests.